--- a/Прием товара_02.md
+++ b/Прием товара_02.md
@@ -1,4 +1,7 @@
 # **Описание процесса приёмки непродовольственных товаров ТОЛЬКО по количеству** на складе маркетплейс
+
+**Схема BPMN**: https://modeler.camunda.io/share/d5df38ba-0871-4650-80e5-099a0f3c96e5
+
 Для каждого шага процесса указаны:
 
 - участники и роли;
