--- a/Прием товара_02.md
+++ b/Прием товара_02.md
@@ -16,7 +16,7 @@
 
 # 0. Предпроцесс: формирование ожидания склада и плана размещения (Pre-Inbound)
 
-> ⚠️ Этот этап **обязателен логически**, хотя физически происходит **до прибытия товара**.
+> Этот этап **обязателен логически**, хотя физически происходит **до прибытия товара**.
 
 ## Цель этапа
 
