Update Прием товара - качество_00.md

--- a/Прием товара - качество_00.md
+++ b/Прием товара - качество_00.md
@@ -15,7 +15,7 @@
 
 # 0. Предпроцесс: формирование ожидания склада и плана размещения (Pre-Inbound)
 
-> ⚠️ Этап обязателен логически и выполняется **до прибытия товара**.
+> Этап обязателен логически и выполняется **до прибытия товара**.
 
 ## Цель этапа
 
